# spinning-earth

./: pyproject.toml
spinning_earth/: earth.txt  spinning_earth.py
tests/: test_spinning_earth.py
